--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,11 @@
 envlist = py27, py33
 
 [testenv]
-commands = python setup.py test
+commands = {envpython} setup.py test
 deps =
-    nose
-    requests
-    python-dateutil
-    httpretty
+    nose==1.3.0
+    ; There is currently a python 3 bug with regards to basestring that
+    ; is not fixed on PyPI, but is on GitHub.  So Require master on GitHub
+    ; for now
+    ; httpretty
+	git+https://github.com/gabrielfalcao/HTTPretty.git#egg=httpretty
