--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python:
     - "2.7"
     - "3.3"
-install: pip install tox
+install: pip install -r requirements.pip
 script: python setup.py test
